// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EventMedia component renders correctly for non symmetric aspect ratios images 1`] = `
<View
  style={
    Object {
      "height": 2250,
      "width": 750,
    }
  }
>
  <Image
    source={
      Object {
        "uri": "someurl",
      }
    }
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        undefined,
      ]
    }
  />
  <BVLinearGradient
    colors={
      Array [
        3003121664,
        0,
      ]
    }
    end={undefined}
    locations={null}
    start={undefined}
    style={
      Object {
        "height": 130,
      }
    }
  />
</View>
`;

exports[`EventMedia component renders correctly for squared images 1`] = `
<View
  style={
    Object {
      "height": 750,
      "width": 750,
    }
  }
>
  <Image
    source={
      Object {
        "uri": "someurl",
      }
    }
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        undefined,
      ]
    }
  />
  <BVLinearGradient
    colors={
      Array [
        3003121664,
        0,
      ]
    }
    end={undefined}
    locations={null}
    start={undefined}
    style={
      Object {
        "height": 130,
      }
    }
  />
</View>
`;
